--- a/README
+++ b/README
@@ -3,7 +3,7 @@ The Powder Toy - July 2016
 Get the latest version here: http://powdertoy.co.uk/Download.html
 
 To use online features such as saving, you need to register at: http://powdertoy.co.uk/Register.html
-You can visit the official TPT fourm here: http://powdertoy.co.uk/Discussions/Categories/Index.html
+You can visit the official TPT forum here: http://powdertoy.co.uk/Discussions/Categories/Index.html
 
 
 Have you ever wanted to blow something up? Or maybe you always dreamt of operating an atomic power plant? Do you have a will to develop your own CPU? The Powder Toy lets you to do all of these, and even more!
