--- a/Changes.txt
+++ b/Changes.txt
@@ -1,5 +1,8 @@
-Updated icon
-Added: FPTC, FNTC, CLNT, LED, TIMC, LITH, FUEL, DMRN, PINV
-Added RSET tool.
-
-New Knight UI (FPS,debug, UI).
+New Dark theme.
+In-game wiki is now accessible from new menu.
+Fix Overlapping of TPTMP when opening console.
+Update the game to latest version (95.0)
+Elements are now placed in respective menus.
+New element QGP (Quark Gluon Plasma).
+Removed some useless elements.
+Updated inbuilt scripts to latest versions.
