--- a/Changes.txt
+++ b/Changes.txt
@@ -1,3 +1,11 @@
 Version 14.0
+Make element menus utilise the new themes.
+New element:
 2 new themes: Pulse and white.
 Minor adjutments to scripts.
+Themes are now saved when closing game.
+HUD (while in debug mode) now shows VX, VY and temp in farenhite.
+Changes:
+Oil can now revert the oxidation of PHOS.
+UVRD is now UV (is slightly visible now)
+PHOS reacts with both fire and cflm based on .tmp values.
