--- a/Changes.txt
+++ b/Changes.txt
@@ -1,6 +1,12 @@
 Changelog for Version 15.0:
+Merge changes from version 96.0
+Fix W key not switching between gravity modes properly.
 THRM is now THMO (Preventing confusion with THRM i.e thermite.)
-New elements: CLOUD, BEE.
+New elements: CLOUD, BEE, SLCN.
 Place Hidden elements in correct menus.
 Fix CMNT's properties.
 Update text for 15.0
+
+TODO:
+Add support for multiple wiki pages.
+Auto select dark theme if nothing was selected.
