--- a/Changes.txt
+++ b/Changes.txt
@@ -1,12 +1,26 @@
 Changelog for Version 15.0:
-Merge changes from version 96.0
+
+#Bug Fixes:
+
+Fix reset button selecting wrong theme for startup. 
 Fix W key not switching between gravity modes properly.
+Fix CMNT's properties.
+
+#Elements:
+
 THRM is now THMO (Preventing confusion with THRM i.e thermite.)
 New elements: CLOUD, BEE, SLCN.
 Place Hidden elements in correct menus.
-Fix CMNT's properties.
-Update text for 15.0
+
+
+#Additions/changes:
+
+Auto select latest theme if nothing was selected.
+Script version in now separately shown when opening the additional menus.
+Merge changes from version 96.0
+Update/change text for 15.0
+Replace version check option.
 
 TODO:
 Add support for multiple wiki pages.
-Auto select dark theme if nothing was selected.
+
