--- a/Changes.txt
+++ b/Changes.txt
@@ -4,16 +4,15 @@ Changelog for Version 15.0:
 Fix reset button selecting wrong theme for startup. 
 Fix W key not switching between gravity modes properly.
 Fix CMNT's properties.
+Fix UI hide option showing some parts when selecting solids.
 
 #Elements:
-
 THRM is now THMO (Preventing confusion with THRM i.e thermite.)
 New elements: CLOUD, BEE, SLCN.
 Place Hidden elements in correct menus.
 
-
 #Additions/changes:
-Add Stack tool, removes top most particle from a stack.
+Add some Stack tools.
 Auto select latest theme if nothing was selected.
 Much more refined experience.
 Script version in now separately shown when opening the additional menus.
