Add ECLR and other minor changes.

--- a/Changes.txt
+++ b/Changes.txt
@@ -2,21 +2,21 @@ Changelog for Version 15.0:
 
 #Additions/changes:
 THRM is now THMO (Preventing confusion with THRM i.e thermite.)
-New elements: CLOUD, BEE, SLCN. (read wiki!)
-Place Hidden elements in correct menus.
-Optimisations to some of the new elements.
+New elements: CLOUD, BEE, SLCN and ELCR (read wiki!)
+Bigger buttons for new menu.
+Place Hidden elements in the correct menus.
+Optimisations to some of the new elements (better performance.)
 Remove the watermark from screenshots.
 Add Stack tools.
 Auto select latest theme if nothing was selected.
-Expect overall more refined experience.
 Script version in now shown separately when opening the menu.
 Merge changes from version 96.0
-Added new theme.
+Added new themes.
 Update/change text for 15.0
-Replace version check option.
-
+Replace version check option with new tools.
 
 #Bug Fixes:
+Fix X and Y coords not showing up correctly.
 Fix PHOS behaving oddly with CFLM and FIRE.
 Fix reset button selecting wrong theme for startup. 
 Fix W key not switching between new gravity modes properly.
