Add pusle theme back, make changes with how themes were handled. Update changelogs

--- a/Changes.txt
+++ b/Changes.txt
@@ -1,6 +1,7 @@
 Changelog for Version 15.0:
 
 #Additions/changes:
+Pulse theme is now set as default when launching game for first time.
 THRM is now THMO (Preventing confusion with THRM i.e thermite.)
 New elements: CLOUD, BEE, SLCN and ELCR (read wiki!)
 Bigger buttons for new menu.
