--- a/Changes.txt
+++ b/Changes.txt
@@ -4,6 +4,7 @@ Changelog for Version 15.0:
 Pulse theme is now set as default when launching game for first time.
 THRM is now THMO (Preventing confusion with THRM i.e thermite.)
 New elements: CLOUD, BEE, SLCN and ELCR (read wiki!)
+QGP explodes in a much better way now.
 Bigger buttons for new menu.
 Place Hidden elements in the correct menus.
 Optimisations to some of the new elements (better performance.)
