--- a/Changes.txt
+++ b/Changes.txt
@@ -5,8 +5,8 @@ Changelog for Version 16.0:
 3) New elements: CWIR and ROCK.
 4) Change C-16's colour and update VSNS.
 5) Cloud and BEE are now much more better and realistic.
-6)
-7)
+6) CMNT now takes some time to solidify.
+7) Tons of code refactoring for new elements.
 8)
 9)
 10)
