--- a/Changes.txt
+++ b/Changes.txt
@@ -1,15 +1,14 @@
 Changelog for Version 16.0:
 
-1) Fix some element descriptions.
-2) Merge changes from version 96.0
-3) New elements: CWIR and ROCK.
-4) Change C-16's colour and update VSNS.
-5) Cloud and BEE are now much more better and realistic.
-6) CMNT now takes some time to solidify.
-7) Tons of code refactoring for new elements.
-8)
-9)
-10)
+**  Fix some element descriptions.
+**  Merge changes from version 96.0
+**  New elements: CWIR and ROCK.
+**  Change C-16's colour and update VSNS.
+**  Cloud and BEE are now much more better and realistic.
+**  CMNT now takes some time to solidify.
+**  Tons of code refactoring for new elements.
+** 
+** 
 
 todo
 Update LSNS and HSWC.
