--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,4 @@
 # It may also be used by mod owners using the starcatcher update server to write changelogs for their mods
 # Erase and replace the changelog for every release, do not just append changes to the end
 
-Fix air being able to go through walls for a frame after undoing
-Show NONE in {ctype} signs instead of 0 when an element has no ctype
-Fix some legacy lua api functions allowing you to set properties on element 0
+New element: LITH. Reactive element that explodes on contact with water.
