--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-# This file is used by the starcatcher.us snapshot server to pull changelogs
-# It may also be used by mod owners using the starcatcher update server to write changelogs for their mods
+# This file is used by the starcatcher.us update server to pull changelogs for mod releases
 # Erase and replace the changelog for every release, do not just append changes to the end
-
-New element: LITH. Reactive element that explodes on contact with water.
+# Lines starting with # and empty lines are ignored
